2009-09-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-07-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add a convenience ExecuteSchedulerAsync
	method.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Utilities.cs: Added, moved some methods from the
	MonkeyWrench.Web.UI assembly here.

	* Makefile:
	* MonkeyWrench.DataClasses.csproj: Ref System.Web.dll too.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add the possibility to get a redirect
	url which doesn't propagate credentials.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add a check to not upload files > 100MB.

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.Generated.cs: Regenerated.

2009-06-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add a method to download a string and
	decompress it if necessary.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
	* WebServices.cs: Added safe remote methods (safe as in
	it'll retry if the connection to the remote server fails).

	* WebServices.Generated.cs: Regenerated.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add support for downloading revision
	logs and diffs.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SqlToCSharp.cs: Add support for nullable types in views.

2009-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Utils.cs: Don't hardcode the path to the web service.