@@ -1,0 +1,26 @@
+﻿/*
+ * FindLaneResponse.cs
+ *
+ * Authors:
+ *   Rolf Bjarne Kvinge (RKvinge@novell.com)
+ *   
+ * Copyright 2009 Novell, Inc. (http://www.novell.com)
+ *
+ * See the LICENSE file included with the distribution for details.
+ *
+ */
+
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+using MonkeyWrench;
+
+namespace MonkeyWrench.DataClasses.Logic
+{
+	public class FindHostResponse : WebServiceResponse
+	{
+		public DBHost Host;
+	}
+}
