@@ -1,3 +1,8 @@
+2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.asmx.cs: Added FindHost.
+	* WebServices.wsdl: Regenerated.
+
 2009-09-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* WebServices.asmx.cs: Add EditHostWithPassword method
