@@ -1,3 +1,9 @@
+2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.Generated.cs: Regenerated.
+
+	* MonkeyWrench.DataClasses.csproj: Updated.
+
 2009-09-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* WebServices.Generated.cs: Regenerated.
